# groundtruth

./: .env.example  .gitignore  AGENTS.md  README.md  area-3d.html  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pois_hub_madison_caseA.json  pois_hub_madison_caseB.json  pyproject.toml  skills-lock.json  tsconfig.json  vite.config.js  vitest.config.js
.cursor/plans/: fix_groundtruth_zoom_flow_07383f86.plan.md
app/: globals.css  layout.tsx  page.tsx
app/explore/: page.tsx
backend/: README.md
backend/app/: __init__.py  census_profile_service.py  census_service.py  main.py  report_card_service.py  schemas.py
chatbot_backend/: README.md  __init__.py  app.py  chat.py  chat_config.py  check_imports.py  config.py  design.md  keywords.py  rank.py  requirements.txt  test_backend.py  tts.py  weights.py
components/: ConvexClientProvider.tsx
components/groundtruth/: ExploreScene.tsx  LandingHero.tsx  MapExperience.tsx  SearchBar.tsx  (+1 more)
convex/: myFunctions.ts  tsconfig.json
docs/: BUILDING_COLORING_BY_TYPE.md  CITY_SIMULATION.md
scripts/: README-census-reporter-lookup.md  area3d-url.mjs  census_reporter_lookup.py
scripts_sumedh/: PHASES.md  activity.py  analyze_bundle.py  chicago_crime.py  disaster.py  new changes.md  overpass_pois.py  pois_dynamic.py  test_overpass.py  test_pois_dynamic_hub_madison.py
src/: App.css  App.jsx  area3d-main.jsx  main.jsx
tests/: test_census_by_point_endpoint.py  test_census_reporter_lookup.py  test_poi_report_card_endpoint.py  test_pois_dynamic_endpoint.py  test_pois_endpoint.py  test_tract_geo_endpoint.py
(+57 files in other folders)
