[project]
name = "groundtruth-census-tools"
version = "0.1.0"
description = "Coordinate-to-tract Census Reporter lookup utilities"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "uvicorn>=0.35.0,<1.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0,<9.0.0",
]
